--- a/portfolio.html
+++ b/portfolio.html
@@ -115,6 +115,7 @@
             z-index: 3;
             transition: transform 0.3s ease, background 0.3s ease;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            pointer-events: none;
         }
 
         .portfolio-item.video::after {
@@ -129,6 +130,7 @@
             border-top: 14px solid transparent;
             border-bottom: 14px solid transparent;
             z-index: 4;
+            pointer-events: none;
         }
 
         .portfolio-item.video:hover::before {
@@ -146,11 +148,12 @@
             display: none;
         }
 
-        /* Thumbnail wrapper */
+        /* Thumbnail wrapper - must be above overlay */
         .portfolio-item-thumbnail {
             position: absolute;
             inset: 0;
             cursor: pointer;
+            z-index: 6;
         }
 
         /* Inline video container */
