fix: use youtube-nocookie and remove mute for better playback

--- a/portfolio.html
+++ b/portfolio.html
@@ -862,13 +862,13 @@
             const videoId = getYouTubeId(item.videoUrl);
             if (!videoId) return;
 
-            // Standard embed params - works for both regular videos and Shorts
-            const embedParams = 'autoplay=1&mute=1&rel=0&modestbranding=1&playsinline=1&controls=1&fs=1';
+            // Embed params without mute for better playback
+            const embedParams = 'autoplay=1&rel=0&modestbranding=1&playsinline=1&controls=1&fs=1';
 
+            // Use youtube-nocookie for better embed compatibility
             inlineContainer.innerHTML = `<iframe 
-                src="https://www.youtube.com/embed/${videoId}?${embedParams}" 
+                src="https://www.youtube-nocookie.com/embed/${videoId}?${embedParams}" 
                 frameborder="0"
-                loading="eager"
                 style="width:100%;height:100%;position:absolute;top:0;left:0;"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen></iframe>`;
