--- a/portfolio.html
+++ b/portfolio.html
@@ -927,11 +927,13 @@
             const wrapper = document.getElementById('videoPlayerWrapper');
 
             if (videoId) {
-                // Standard embed - works for both regular videos and Shorts
-                const embedParams = 'autoplay=1&rel=0&modestbranding=1&playsinline=1&controls=1';
+                // Standard embed
+                const embedParams = 'autoplay=1&rel=0&modestbranding=1&playsinline=1&controls=1&fs=1';
 
                 wrapper.innerHTML = `<iframe 
-                    src="https://www.youtube.com/embed/${videoId}?${embedParams}" 
+                    src="https://www.youtube-nocookie.com/embed/${videoId}?${embedParams}" 
+                    frameborder="0"
+                    style="width:100%;height:100%;"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     allowfullscreen></iframe>`;
             } else {
