--- a/portfolio.html
+++ b/portfolio.html
@@ -867,15 +867,15 @@
             const videoId = getYouTubeId(item.videoUrl);
             if (!videoId) return;
 
-            // Embed params without mute for better playback
-            const embedParams = 'autoplay=1&rel=0&modestbranding=1&playsinline=1&controls=1&fs=1';
+            // Simple embed params for maximum compatibility
+            const embedParams = 'autoplay=1&controls=1&rel=0&playsinline=1';
 
-            // Use youtube-nocookie for better embed compatibility
+            // Use standard youtube.com for best reliability
             inlineContainer.innerHTML = `<iframe 
-                src="https://www.youtube-nocookie.com/embed/${videoId}?${embedParams}" 
+                src="https://www.youtube.com/embed/${videoId}?${embedParams}" 
                 frameborder="0"
                 style="width:100%;height:100%;position:absolute;top:0;left:0;"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen></iframe>`;
 
             // Show inline video, hide thumbnail, show expand button
@@ -932,14 +932,14 @@
             const wrapper = document.getElementById('videoPlayerWrapper');
 
             if (videoId) {
-                // Standard embed
-                const embedParams = 'autoplay=1&rel=0&modestbranding=1&playsinline=1&controls=1&fs=1';
+                // Standard embed - simplified
+                const embedParams = 'autoplay=1&controls=1&rel=0&playsinline=1&fs=1';
 
                 wrapper.innerHTML = `<iframe 
-                    src="https://www.youtube-nocookie.com/embed/${videoId}?${embedParams}" 
+                    src="https://www.youtube.com/embed/${videoId}?${embedParams}" 
                     frameborder="0"
                     style="width:100%;height:100%;"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>`;
             } else {
                 // If not YouTube, try opening as regular video or redirect
