--- a/portfolio.html
+++ b/portfolio.html
@@ -107,44 +107,10 @@
             font-style: italic;
         }
 
-        .portfolio-item.video::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 70px;
-            height: 70px;
-            background: rgba(255, 0, 0, 0.9);
-            border-radius: 50%;
-            z-index: 3;
-            transition: transform 0.3s ease, background 0.3s ease;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-            pointer-events: none;
-        }
-
+        /* Red play button removed as requested */
+        .portfolio-item.video::before,
         .portfolio-item.video::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-40%, -50%);
-            width: 0;
-            height: 0;
-            border-left: 22px solid white;
-            border-top: 14px solid transparent;
-            border-bottom: 14px solid transparent;
-            z-index: 4;
-            pointer-events: none;
-        }
-
-        .portfolio-item.video:hover::before {
-            transform: translate(-50%, -50%) scale(1.15);
-            background: rgba(255, 0, 0, 1);
-        }
-
-        .portfolio-item.video:active::before {
-            transform: translate(-50%, -50%) scale(0.95);
+            display: none;
         }
 
         /* Hide play button when video is playing inline */
